Agregando cards para productos

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     </header>
 
-    <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel" style="margin-bottom: 120px;">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="5000">
             <img src="img/Corredores/Joaquin/IMG_7613.PNG" class="d-block w-100 h-25 img-fluid" alt="...">
@@ -89,7 +89,7 @@
 
     <main class="container principal">
 
-        <div class="row d-flex justify-content-around align-items-center mb-5">
+        <div class="row d-flex justify-content-around align-items-center" style="margin-bottom: 300px;">
 
             <div class="col-12 col-md-5 col-lg-8">
 
@@ -116,7 +116,7 @@
             
         </div>
 
-        <div class="row d-flex justify-content-around align-items-center mb-5">
+        <div class="row d-flex justify-content-around align-items-center" style="margin-bottom: 300px;">
 
             <div class="col-12 col-md-5 col-lg-8  order-lg-2 order-md-1">
 
@@ -152,7 +152,7 @@
             
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-bottom: 300px;">
 
             <div class="col-12">
 
@@ -170,6 +170,33 @@
 
         </div>
     </main>
+
+    <div class="card-group" style="margin-bottom: 320px;">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
 
     <footer class="footer">
         <div class="contenido-footer_imagen">
