--- a/checks.html
+++ b/checks.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kondur Skateboard</title>
     <link rel="icon" href="img/logoKondur.png" />
-    <link rel="stylesheet" href="Css/normalize.css">
-    <link rel="stylesheet" href="Css/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="sass/custom.css" />
+
+    <link rel="stylesheet" href="Css/normalize.css" />
+    <link rel="stylesheet" href="Css/styles.css" />
 </head>
 <body>
     
@@ -210,6 +213,6 @@
         </div>
 
     </footer>
-
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
