Maquetado pagina team

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <footer class="bg-black ">
         <div class="container">
-            <div class="row my-4">
+            <div class="row mt-4">
                 <ul class="nav col-md-12 justify-content-center my-3">
         
                     <li class="nav-item">
@@ -247,9 +247,6 @@
             </div>
         </div>
     </footer>
-
-
-
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
