--- a/productos.html
+++ b/productos.html
@@ -68,10 +68,10 @@
     <section class="container-fluid">
 
         <div class="row titulo-box align-items-center col col-sm col-lg">
-            <h2 class="text-center text-uppercase fw-bold titulo">Nuestros productos</h2>
+            <h2 class="text-center text-uppercase fw-bold text-black titulo">Nuestros productos</h2>
         </div>
 
-        <h3 class="text-uppercase text-center fw-bold titulo-producto ps-3 w-25">Tablas</h3>
+        <h3 class="text-uppercase text-center fw-bold titulo-producto ps-3 w-25 ">Tablas</h3>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center col col-sm col-lg">
             <div class="col producto-card">
@@ -446,7 +446,7 @@
 
     <footer class="bg-black ">
         <div class="container">
-            <div class="row my-4">
+            <div class="row mt-4">
                 <ul class="nav col-md-12 justify-content-center my-3">
 
                     <li class="nav-item">
