Maquetando pagina checks v.1

--- a/checks.html
+++ b/checks.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="Css/styles.css" />
 </head>
 
-<body>
+<body class="bg-primary">
 
     <header class="container-fluid bg-black">
         <div class="row col col-sm col-lg titulo">
@@ -66,13 +66,15 @@
     </header>
 
 
-    <main class="contenedor-checks">
+    <main class="container">
 
-        <section>
+        <div class="row titulo-box align-items-center col col-sm col-lg">
+            <h2 class="text-center text-uppercase fw-bold text-black titulo">Nuestros checks</h2>
+        </div>
 
-            <h1>Nuestros checks</h1>
+        <section class="border">
 
-            <div class="contenido-multimedia">
+            <div class="">
                 <video src="videos/video1.MOV" alt="Contenido multimedia" controls="" class="video">
             </div>
 
