--- a/checks.html
+++ b/checks.html
@@ -72,169 +72,136 @@
             <h2 class="text-center text-uppercase fw-bold text-black titulo">Nuestros checks</h2>
         </div>
 
-        <section class="border">
+        <section class="row">
 
-            <div class="">
-                <video src="videos/video1.MOV" alt="Contenido multimedia" controls="" class="video">
+            <div class="container-fluid">
+                <video src="img/Kondur - Sants in Cba .mp4" alt="Contenido multimedia" class="w-100 bg-black"
+                    height="540" controls>
             </div>
 
-            <div class="descripcion">
-                <h2>Pibes maestros</h2>
-                <p>
+            <div class="contenedor-info col-12 col-md-8 col-lg-8 mx-auto">
+
+                <h2 class="text-black text-uppercase p-3">Pibes maestros</h2>
+                <p class="fs-4 text-black p-4">
                     Los pibes saliendo a gozar una tarde de sábado por nuestro querido valle central. Paseando,
                     patinando y disfrutando
                     las plazas de nuestra Catamarca nos encontramos con la plaza del maestro y descubriendo sus lugares
                     para patinar y disfrutar
                     de una buena tarde de skate y amigos.
                 </p>
+
             </div>
 
-            <div class="contenedor-filmer">
+            <div class="card mb-3 w-50 m-auto border-3 border-dark ps-0 mt-3 bg-transparent">
+                <div class="row g-0">
+                    <div class="col-md-4 text-center">
+                        <img src="img/Corredores/Joaquin/IMG_6632.JPG" class="img-fluid rounded-start w-100 img-perfil"
+                            alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body align-items-center ms-5">
+                            <h5 class="card-title fs-1 mb-4"><span class="fw-bold">Filmer:</span> Gorwi</h5>
+                            <!--REDES-->
+                            <div class="d-flex justify-content-around w-50">
 
-                <div class="caja-img-bio">
-                    <img src="img/Corredores/Joaquin/IMG_6632.JPG" alt="a">
+                                <a href="#" target="_blank"
+                                    class="bg-dark rounded-3">
+                                    <img src="img/icono-facebook.png" alt="Icono facebook" height="80px" />
+                                </a>
+
+                                <a href="#" target="_blank">
+                                    <img src="img/icono-instagram.png" alt="Icono Instagram" height="80px"
+                                        class="bg-dark" style="border-radius: 20px;" />
+                                </a>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <p>
-                    Filmer: Gorwi
-                </p>
-
-                <div class="contenedor-redes">
-                    <nav class="navegacion-redes">
-                        <a href="#" target="_blank">
-                            <img src="img/icono-facebook.png" alt="Icono facebook">
-                        </a>
-
-                        <a href="#" target="_blank">
-                            <img src="img/icono-instagram.png" alt="Icono Instagram">
-                        </a>
-                    </nav>
-                </div>
-
             </div>
 
         </section>
 
-        <hr>
+        <hr class="w-75 border-2 mx-auto mt-5 mb-5">
 
-        <section>
+        <section class="row">
 
-            <div class="contenido-multimedia">
-                <video src="videos/Kondur - Joaquin.mp4" alt="Contenido multimedia" controls="" class="video">
+            <div class="container-fluid">
+                <video src="img/Kondur - Joaquin(1).mp4" alt="Contenido multimedia" class="w-100 bg-black"
+                    height="540" controls>
             </div>
 
-            <div class="descripcion">
-                <h2>Joaquin 4x4</h2>
-                <p>
-                    Nuestra pequeña bestia del skate catamarqueño demostrando que no solo puede dar la demo en nuestras
-                    pistas, sino
-                    tambien por nuestras calles de San Fernando, explorando y dejando su marca por el dique del valle
-                    central.
+            <div class="contenedor-info col-12 col-md-8 col-lg-8 mx-auto">
+
+                <h2 class="text-black text-uppercase p-3">Joaquin 4x4</h2>
+                <p class="fs-4 text-black p-4">
+                    Nuestra pequeña bestia del skate catamarqueño demostrando que no solo puede dar la demo en nuestras pistas, sino
+                    tambien por nuestras calles de San Fernando, explorando y dejando su marca por el dique del valle central.
                 </p>
+
             </div>
 
-            <div class="contenedor-filmer">
+            <div class="card mb-3 w-50 m-auto border-3 border-dark ps-0 mt-3 bg-transparent">
+                <div class="row g-0">
+                    <div class="col-md-4 text-center">
+                        <img src="img/Corredores/Joaquin/IMG_6632.JPG" class="img-fluid rounded-start w-100 img-perfil"
+                            alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body align-items-center ms-5">
+                            <h5 class="card-title fs-1 mb-4"><span class="fw-bold">Filmer:</span> Gorwi</h5>
+                            <!--REDES-->
+                            <div class="d-flex justify-content-around w-50">
 
-                <div class="caja-img-bio">
-                    <img src="img/Corredores/Joaquin/IMG_6632.JPG" alt="a">
+                                <a href="#" target="_blank"
+                                    class="bg-dark rounded-3">
+                                    <img src="img/icono-facebook.png" alt="Icono facebook" height="80px" />
+                                </a>
+
+                                <a href="#" target="_blank">
+                                    <img src="img/icono-instagram.png" alt="Icono Instagram" height="80px"
+                                        class="bg-dark" style="border-radius: 20px;" />
+                                </a>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <p>
-                    Filmer: Gorwi
-                </p>
-
-                <div class="contenedor-redes">
-                    <nav class="navegacion-redes">
-                        <a href="#" target="_blank">
-                            <img src="img/icono-facebook.png" alt="Icono facebook">
-                        </a>
-
-                        <a href="#" target="_blank">
-                            <img src="img/icono-instagram.png" alt="Icono Instagram">
-                        </a>
-                    </nav>
-                </div>
-
             </div>
 
         </section>
 
-        <hr>
-
-        <section>
-
-            <div class="contenido-multimedia">
-                <video src="videos/Kondur - Sants in Cba .mp4" alt="Contenido multimedia" controls="" class="video">
-            </div>
-
-            <div class="descripcion">
-                <h2>Santi por Cba</h2>
-                <p>
-                    Allá por la ciudad de Córdoba, nuestro santi salio por las calles y pistas para demostrar todo el
-                    poder y habilidad con su skate, y para disfrutar y compartir con toda la banda cordobesa.
-                </p>
-            </div>
-
-            <div class="contenedor-filmer">
-
-                <div class="caja-img-bio">
-                    <img src="img/Corredores/Joaquin/IMG_6632.JPG" alt="a">
-                </div>
-
-                <p>
-                    Filmer: Gorwi
-                </p>
-
-                <div class="contenedor-redes">
-                    <nav class="navegacion-redes">
-                        <a href="#" target="_blank">
-                            <img src="img/icono-facebook.png" alt="Icono facebook">
-                        </a>
-
-                        <a href="#" target="_blank">
-                            <img src="img/icono-instagram.png" alt="Icono Instagram">
-                        </a>
-                    </nav>
-                </div>
-
-            </div>
-
-        </section>
-
-        <hr>
 
     </main>
 
-    <footer class="footer">
-
-        <div class="contenido-footer_imagen">
-            <a href="index.html">
-                <img src="img/tituloKondur.png" alt="Logo Kondur">
-            </a>
+    <footer class="bg-black mt-5">
+        <div class="container">
+            <div class="row mt-4">
+                <ul class="nav col-md-12 justify-content-center my-3">
+        
+                    <li class="nav-item">
+                        <a class="nav-link px-2 text-primary fs-4" href="productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-2 text-primary fs-4" href="team.html">Team Kondur</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-2 text-primary fs-4" href="checks.html">Checks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-2 text-primary fs-4" href="contacto.html">Contacto</a>
+                    </li>
+        
+                </ul>
+                <a href="index.html" class="col-md-12 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                    <img src="img/tituloKondur.png" alt="">
+                </a>
+            </div>
         </div>
-
-        <div class="contenido-footer__redes">
-
-            <nav class="navegacion-footer">
-
-                <a href="https://www.facebook.com/KondurSkateboards/" target="_blank">
-                    <img src="img/icono-facebook.png" alt="Icono facebook">
-                </a>
-
-                <a href="https://www.instagram.com/kondurskateboards/" target="_blank">
-                    <img src="img/icono-instagram.png" alt="Icono Instagram">
-                </a>
-
-                <a href="#" target="_blank">
-                    <img src="img/icono-gmail.png" alt="Icono gmail">
-                </a>
-
-            </nav>
-
-        </div>
-
     </footer>
+
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+
 </body>
 
 </html>
