--- a/contacto.html
+++ b/contacto.html
@@ -72,8 +72,8 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-11 col-lg-10">
-                    <form method="POST" class="form-horizontal has-validator bs5-form">
+                <div class="col-md-11 col-lg-10 bg-dark">
+                    <form method="POST" class="form-horizontal has-validator bs5-form pb-4">
                         <fieldset>
                             <div class="row mb-3 mt-5">
                                 <div class="col-sm-6">
@@ -138,7 +138,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12 col-12 text-center">
-                                    <button type="submit" name="submit-btn" value="1" class="btn btn-dark btn-lg w-50"
+                                    <button type="submit" name="submit-btn" value="1" class="btn btn-primary btn-lg mt-2 w-25"
                                         data-ladda-button="true" data-style="zoom-in">
                                         Enviar
                                         <i class="bi bi-envelope-fill ms-2" aria-hidden="true"></i>
